test/arrays/deitz/test_return_array_in_non_var_function.good
test_return_array_in_non_var_function.chpl:13: error: illegal lvalue in assignment
